[package]
name = "panda"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features=['map_physical_memory'] }
volatile = "0.3.0"
rlibc = "1.0.0"
lazy_static = { version = "1.0", features=['spin_no_std'] }
spin = "0.5.2"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]