[package]
name = "panda"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features=['map_physical_memory'] }
lazy_static = { version = "1.0", features=['spin_no_std'] }
rlibc = "1.0.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.3.0"
x86_64 = "0.11.7"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
  "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
