[package]
name = "panda"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { path = "../acpi/acpi" }
aml = { path = "../acpi/aml" }
bit_field = "0.10.1"
bootloader = { version = "0.9.8", features=['map_physical_memory'] }
byteorder = { version = "1.3.4", default-features=false }
conquer-once = { version = "0.2.1", default-features=false }
crossbeam-queue = { version = "0.2.3", default-features=false, features=['alloc'] }
futures-util = { version = "0.3.6", default-features = false, features = ["alloc"] }
hashbrown = "0.9.1"
lazy_static = { version = "1.0", features=['spin_no_std'] }
linked_list_allocator = { version = "0.8.5", features=['use_spin'] }
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
rlibc = "1.0.0"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.3.0"
x86_64 = "0.11.7"

[package.metadata.bootimage]
run-command = [
  "qemu-system-x86_64",  
  "-nodefaults", "-readconfig", "qemu.cfg", 
  "-drive", "id=disk,format=raw,file={},if=none"
]
run-args = []
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
  "-serial", "stdio",
  "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
